--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,8 +6,9 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "allowJs": true
+    "strict": false,
+    "allowJs": true,
+    "checkJs": false
   },
   "include": ["vite.config.js"]
 }
